appId: org.getspot
env:
  SCREENSHOT_DIR: ${MAESTRO_SCREENSHOT_DIR}
---
- launchApp:
    clearState: true

# First, tap the button to reveal the email/password form
- tapOn: "Sign in with Email"
- takeScreenshot: ${SCREENSHOT_DIR}/login_screen

# Now, fill in the credentials
- tapOn: "Email"
- inputText: "${MAESTRO_TEST_EMAIL}"
- tapOn: "Password"
- inputText: "${MAESTRO_TEST_PASSWORD}"

# Tap the final Sign In button
- tapOn: "Sign In"

# Wait for the group list to load by asserting that the "No groups found." text is not visible.
- assertVisible: "My Groups"

# User profile
- assertVisible: "user_profile_button"
- tapOn: "user_profile_button"
- takeScreenshot: ${SCREENSHOT_DIR}/user_profile_screen
- tapOn: "Back"

- assertNotVisible: "No groups found."
- assertVisible: "group_item_${MAESTRO_TEST_GROUP_ID}"

# Take a screenshot of the home screen with groups.
- takeScreenshot: ${SCREENSHOT_DIR}/home_screen_with_groups

- tapOn: "group_item_${MAESTRO_TEST_GROUP_ID}"
- assertVisible: "Sunridge Saturday"

- takeScreenshot: ${SCREENSHOT_DIR}/group_details_screen

# Announcements tab
- tapOn: "Announcements\nTab 2 of 2"
- takeScreenshot: ${SCREENSHOT_DIR}/announcements_tab_screen
- tapOn: "Events\nTab 1 of 2"

# My Wallet button
- assertVisible: "My Wallet"
- tapOn: "My Wallet"
- takeScreenshot: ${SCREENSHOT_DIR}/my_wallet_screen
- tapOn: "Back"

# Event details
- assertVisible: "event_item_0"
- tapOn: "event_item_0"

- assertVisible: "Event Details"
- takeScreenshot: ${SCREENSHOT_DIR}/event_details_screen

# Stop the app
- stopApp